--- a/.gitignore
+++ b/.gitignore
@@ -29,4 +29,25 @@ app/debug/
 app/build/intermediates/
 app/build/outputs/
 *.hprof
-mapping.txt 
+mapping.txt
+
+# Gizli dosyalar
+*.properties
+!gradle-wrapper.properties
+google-services.json
+keystore.properties
+
+# IDE dosyaları
+*.log
+.navigation/
+captures/
+output.json
+
+# OS dosyaları
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db 
